--- a/style.css
+++ b/style.css
@@ -38,19 +38,25 @@ header {
   top: 0;
   left: 0;
   color: var(--white-bg);
-  padding: 0.5em;
+  /* padding: 0.5em; */
 }
+.nav {
+  border: 2px solid red;
+  justify-items: center;
+}
+.nav__list {
+  border: 5px solid green;
+  padding: 0;
+  text-align: center;
+}
+
 .nav__list,
 .nav__flex--right {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  align-items: center;
-  margin: 0;
   font-size: calc(1.5rem - 10px);
 }
 .nav__flex--right {
-  margin-right: 30px;
+  /* margin-right: 30px; */
+  /* margin-left: -50px; */
 }
 .nav__logo {
   font-size: 4rem;
@@ -60,6 +66,10 @@ header {
 .nav__item {
   text-decoration: none;
   cursor: pointer;
+}
+.nav__item + .nav__item {
+  color: red;
+  margin-top: 10px;
 }
 
 .nav__item:hover {
@@ -82,22 +92,23 @@ header {
 /*SECTION-1*/
 .section-1 {
   background-color: var(--dark-bg);
-  padding: 3em;
+  padding: 0.5em;
 }
 
 .responsive-layout,
 .learn {
   text-align: center;
-  margin: 1em;
-  padding: 2em;
+  /* margin: 1em; */
+  padding: 0.5em;
+  width: 100%;
 }
 .responsive {
   color: var(--white-bg);
-  font-size: calc(5rem - 20px);
+  font-size: calc(5rem - 50px);
 }
 .golden-text {
   color: var(--golden-bg);
-  font-size: calc(5rem - 20px);
+  font-size: calc(5rem - 50px);
 }
 
 .learn-paragraph {
