--- a/style.css
+++ b/style.css
@@ -1,17 +1,12 @@
 *,
 ::before,
 ::after {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-html {
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-}
 body {
-  padding: 0;
-  margin: 0;
   font-family: sans-serif;
   font-size: 1.3rem;
   line-height: 1.3;
@@ -30,7 +25,9 @@ img {
 li {
   list-style: none;
 }
-
+section {
+  padding: 2em 1.3em;
+}
 header {
   background-color: var(--deep-bg);
   position: -webkit-sticky;
@@ -38,15 +35,12 @@ header {
   top: 0;
   left: 0;
   color: var(--white-bg);
-  /* padding: 0.5em; */
+  padding: 0 0 1em 0;
 }
-.nav {
-  border: 2px solid red;
-  justify-items: center;
-}
+
 .nav__list {
-  border: 5px solid green;
   padding: 0;
+  margin: 0;
   text-align: center;
 }
 
@@ -54,21 +48,16 @@ header {
 .nav__flex--right {
   font-size: calc(1.5rem - 10px);
 }
-.nav__flex--right {
-  /* margin-right: 30px; */
-  /* margin-left: -50px; */
-}
+
 .nav__logo {
   font-size: 4rem;
   font-weight: 900;
   font-style: oblique;
 }
 .nav__item {
-  text-decoration: none;
   cursor: pointer;
 }
 .nav__item + .nav__item {
-  color: red;
   margin-top: 10px;
 }
 
@@ -92,29 +81,28 @@ header {
 /*SECTION-1*/
 .section-1 {
   background-color: var(--dark-bg);
-  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
 }
 
 .responsive-layout,
 .learn {
   text-align: center;
-  /* margin: 1em; */
-  padding: 0.5em;
-  width: 100%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
-.responsive {
+.responsive-layout {
   color: var(--white-bg);
-  font-size: calc(5rem - 50px);
+  font-size: calc(5rem - 60px);
 }
 .golden-text {
   color: var(--golden-bg);
-  font-size: calc(5rem - 50px);
 }
 
 .learn-paragraph {
-  text-wrap: balance;
+  text-wrap: wrap;
   color: whitesmoke;
-  margin: 25px 0;
 }
 
 .learn-btn {
@@ -122,37 +110,34 @@ header {
   font-size: 1.3rem;
   text-transform: uppercase;
   font-weight: 700;
+  margin-top: 2em;
 }
 
 /*SECTION-2*/
 .section-2 {
   background-color: rgba(230, 216, 199, 0.2);
-  padding: 3em;
 }
 
 .sect-2-article {
   text-align: center;
-  padding: 2em;
 }
 
 .sect-2-heading {
   color: var(--golden-bg);
-  margin: 20px 0;
+  margin-top: 25px;
+  margin-bottom: 5px;
   font-size: 2rem;
   font-weight: 700;
 }
 
 /*SECTION-3*/
-.section-3 {
-  padding: 3em;
-}
 .left-sider-3 {
-  padding: 3.5em;
+  text-align: center;
 }
 
 .sect-3-heading {
   color: var(--golden-bg);
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 700;
 }
 .sect-3-para {
@@ -172,7 +157,6 @@ header {
 /*SECTION-4*/
 .section-4 {
   background-color: var(--deep-bg);
-  padding: 3em;
 }
 .sect-4-heading {
   color: var(--white-bg);
@@ -180,19 +164,20 @@ header {
   font-size: 1.8rem;
   font-weight: 900;
 }
-.sect-4-down {
-  padding: 1em;
-  width: 30%;
-}
-.company {
-  width: 60%;
+.sect-4-sub {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  margin-top: 20px;
 }
 
 .sect-4-down > h4 {
   color: var(--golden-bg);
   font-size: calc(2rem - 10px);
   font-size: 400;
+  margin: 20px 0;
 }
+
 .down-para,
 .down-item {
   color: whitesmoke;
@@ -202,7 +187,6 @@ header {
 }
 .down-item {
   line-height: 1.9;
-  /* margin-top: 20px; */
 }
 
 .modal {
@@ -249,29 +233,59 @@ header {
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 900px) {
+  header {
+    padding: 0;
+  }
   .nav__list,
   .nav__flex--right {
-    flex-direction: row;
-    justify-content: space-between;
+    display: flex;
     align-items: center;
   }
+  .nav__list {
+    justify-content: space-between;
+    margin: 0 2em;
+  }
+  .nav__flex--right {
+    gap: 2em;
+  }
+  .nav__item + .nav__item {
+    margin: 0;
+  }
+  .section-1 {
+    flex-direction: row;
+    align-items: center;
+  }
+  .responsive-layout {
+    font-size: calc(5rem - 40px);
+  }
 
-  .section-1,
-  .section-2,
+  .learn-paragraph {
+    text-wrap: wrap;
+    color: whitesmoke;
+  }
+
+  .section-2 {
+    display: flex;
+    align-items: center;
+    gap: 2em;
+  }
   .section-3 {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
   .sect-4-sub {
-    display: flex;
-    align-items: center;
-    gap: 2em;
+    flex-direction: row;
+    gap: 7.5em;
+    align-items: flex-start;
+  }
+  .sect-4-down > h4 {
+    text-wrap: nowrap;
   }
   .down-para,
   .down-item {
-    font-size: calc(2rem - 20px);
+    font-size: calc(2rem - 17px);
   }
   .sect-4-heading {
     font-size: 2rem;
